<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/download">

        <ListPreference
            app:key="download_format"
            app:title="@string/download_format"

            app:entries="@array/download_format_entries"
            app:entryValues="@array/download_format_entries"
            app:defaultValue="JSON"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/_interface">

        <ListPreference
            app:key="bloc_layout_mode"
            app:title="@string/bloc_layout_mode"

            app:entries="@array/bloc_layout_modes"
            app:entryValues="@array/bloc_layout_modes"
            app:defaultValue="Compact"/>

        <ListPreference
            app:key="temperature_unit"
            app:title="@string/temperature_unit"

            app:entries="@array/temperature_unit_entries"
            app:entryValues="@array/temperature_unit_entries"
            app:defaultValue="Celsius"/>

    </PreferenceCategory>

</PreferenceScreen>
